--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Playfair+Display:ital@0;1&family=Quicksand:wght@500&family=Roboto+Slab:wght@300&display=swap');
+ 
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Oswald', sans-serif;
+}
+
+#banner {
+    background-image: url(../res/mike-kenneally-TD4DBagg2wE-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    height: 100vh;
+    position: relative;
+}
+
+.intro {
+    position: absolute;
+    top: 35%;
+    left: 36.5%;
+}
+
+.big-p {
+    font-size: 3.5em;
+    color: antiquewhite;
+}
+
+.small-p {
+    font-size: 2.3em;
+    color: antiquewhite;
+    position: relative;
+    margin-left: 45px;
+}
+
+.btn {
+    background-color: transparent;
+    color: antiquewhite;
+    border-radius:  5px;
+    border-color: antiquewhite;
+    height: 35px;
+    width: 100px;
+    font-size: 1.2em;
+    position: relative;
+    margin-top: 10px;
+    margin-left: 130px;
+}
+
+.btn:hover {
+    background-color: black;
 }
