--- a/css/nav.css
+++ b/css/nav.css
@@ -3,7 +3,6 @@
     justify-content:space-between ;
     align-items: center;
     height: 5em;
-    background-color: rgb(236, 214, 184);
 }
 
 .nav-items {
@@ -15,13 +14,14 @@
 
 .nav-link {
     text-decoration: none;
-    color: rgb(238, 70, 104);
-    font-size: 25px;
+    color:burlywood;
+    font-size: 2.2em;
 }
 
 #logo {
     height: 70px;
     width: auto;
     margin-left: 35px;
+    margin-top: 10px;
 }
 
