--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,7 @@
 .navigation {
     display: flex;
-   
-    align-items: flex-end;
+    justify-content:space-between ;
+    align-items: center;
     height: 5em;
 }
 
@@ -16,12 +16,27 @@
     text-decoration: none;
     color:rgb(218, 185, 143);
     font-size: 2.2em;
+    position: relative;
+    bottom: 5px;
 }
 
 #logo {
     height: 70px;
     width: auto;
     margin-left: 35px;
-    margin-top: 10px;
+    margin-top: 11px;
 }
 
+#logo:hover{
+    transform: scale(1.1) rotate(5deg);
+    
+}
+
+.nav-item{
+    border-radius: 5px;
+    height: 46px;
+}
+
+.nav-item:hover{
+    background-color: rgb(117, 90, 54);
+}
